--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "devDependencies": {
+    "@types/cors": "^2.8.15",
     "typescript": "^5.2.2"
   },
   "dependencies": {
     "@types/express": "^4.17.20",
     "axios": "^1.5.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^3.0.1",
